Update CorsConfig.java
local plus deployed allowed